Fixed spacing issue in movie info modal

--- a/public/css/modals.css
+++ b/public/css/modals.css
@@ -96,6 +96,10 @@
   height: auto;
 }
 
+.filler {
+  height: 15px;
+}
+
 .description-info h4
 {
   margin-bottom: 10px;
